force-app/main/default/objects/Knowledge__kav/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>添付ファイル</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>