force-app/main/default/objects/Knowledge__kav/fields/PublicList__c.field-meta.xml
<CustomField>
    <fullName>PublicList__c</fullName>
    <label>公開先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TCI</fullName>
            </value>
            <value>
                <fullName>WEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>