force-app/main/default/objects/Knowledge__kav/fields/Supplement__c.field-meta.xml
<CustomField>
    <fullName>Supplement__c</fullName>
    <label>補足</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>