force-app/main/default/objects/Knowledge__kav/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>本文</label>
    <type>TextArea</type>
</CustomField>