force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ_ALL.recordType-meta.xml
<RecordType>
    <fullName>FAQ_ALL</fullName>
    <active>true</active>
    <label>FAQ_ALL</label>
</RecordType>