force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ_TCI.recordType-meta.xml
<RecordType>
    <fullName>FAQ_TCI</fullName>
    <active>true</active>
    <label>FAQ_TCI</label>
</RecordType>