force-app/main/default/objects/Knowledge__kav/recordTypes/FAQ_WEL.recordType-meta.xml
<RecordType>
    <fullName>FAQ_WEL</fullName>
    <active>true</active>
    <label>FAQ_WEL</label>
</RecordType>