force-app/main/default/objects/Knowledge__kav/listViews/AllData.listView-meta.xml
<ListView>
    <fullName>AllData</fullName>
    <columns>ARTICLE_NUMBER</columns>
    <columns>TITLE</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>LANGUAGE</columns>
    <columns>LAST_PUBLISHED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>全てのデータ</label>
</ListView>